fix(button): hover, disabled, alignment, docs
Includes component fixes after global CSS updates
chore(bottomSheet): use md-icon in demos

Closes #1607, Closes #1687, Closes #1690, Closes #1832, Closes #1907, Closes #1987, Closes #2009, Closes #2057

--- a/docs/app/css/style.css
+++ b/docs/app/css/style.css
@@ -554,7 +554,7 @@ md-content.demo-source-container > hljs > pre > code.highlight {
 }
 
 .dashed-bottom {
-  border-bottom: dashed 1px rgb(224, 224, 224);;
+  border-bottom: dashed 1px rgb(224, 224, 224);
   padding-bottom: 10px;
 }
 
